new item modal and some styling

--- a/client/src/app.sass
+++ b/client/src/app.sass
@@ -1,16 +1,21 @@
-.expense-item
-    span
-        display: inline-block
+.top-bar
+    position: sticky
+    top: 0
+    padding-top: 1em
+    padding-left: 2em
+    padding-right: 2em
+    background: #333844
+    z-index: 10
 
+.expense-item
     .date
-        width: 5em
-        padding-right: 10px
-    
+        width: 10em
+
     .amount
-        width: 4em
-        text-align: right
-        padding-right: 2em
+        width: 5em
+
+    .paid-by
+        width: 10em
 
     .description
-        width: 10em
-        padding-right: 2em
+        width: auto
