misc fixes and formatting

--- a/client/src/app.sass
+++ b/client/src/app.sass
@@ -9,10 +9,12 @@
 
 .expense-item
     .date
-        width: 10em
+        width: 8em
 
     .amount
-        width: 5em
+        width: 6em
+        text-align: right
+        padding-right: 1em
 
     .paid-by
         width: 10em
