updating calc view

--- a/client/src/app.sass
+++ b/client/src/app.sass
@@ -25,3 +25,11 @@
 .calculation-view
     div
         margin-bottom: 1em
+
+    tbody
+        tr
+            td:not(:first-child)
+                text-align: right
+
+.calculation-result
+    padding-right: 2em
