auth, payspaces, ui for recurring, and misc

--- a/client/src/app.sass
+++ b/client/src/app.sass
@@ -8,6 +8,10 @@
     z-index: 10
 
 .expense-item
+    .recurrence
+        text-align: right
+        width: 10px
+
     .date
         width: 8em
 
