changes made while scrambling to deploy

--- a/client/src/app.sass
+++ b/client/src/app.sass
@@ -1,10 +1,15 @@
+@import "../node_modules/bulma/bulma.sass"
+@import "../node_modules/bulmaswatch/darkly/bulmaswatch.scss"
+@import "../node_modules/bulmaswatch/darkly/_overrides.scss"
+@import "../node_modules/bulmaswatch/darkly/_variables.scss"
+
 .top-bar
     position: sticky
     top: 0
     padding-top: 1em
     padding-left: 2em
     padding-right: 2em
-    background: #333844
+    background: $primary
     z-index: 10
 
 .expense-item
