--- a/client/src/app.sass
+++ b/client/src/app.sass
@@ -41,3 +41,14 @@
 
 .calculation-result
     padding-right: 2em
+
+tr
+    position: relative
+
+tr.settled td:before 
+    content: " ",
+    position: absolute
+    top: 50%
+    left: 1em
+    right: 1em
+    border-bottom: 2px solid #888
