--- a/client/src/app.sass
+++ b/client/src/app.sass
@@ -52,3 +52,11 @@ tr.settled td:before
     left: 1em
     right: 1em
     border-bottom: 2px solid #888
+
+
+.loading-modal i
+    font-size: 10em
+
+.loading-animation
+    position: relative
+    color: #888
