updating look of settled rows

--- a/client/src/app.sass
+++ b/client/src/app.sass
@@ -45,13 +45,8 @@
 tr
     position: relative
 
-tr.settled td:before 
-    content: " ",
-    position: absolute
-    top: 50%
-    left: 1em
-    right: 1em
-    border-bottom: 2px solid #888
+tr.settled
+    color: #777
 
 
 .loading-modal i
